# Home

./: .gitignore  README.md
Deck/: deckPost.FCStd
Deck/3Dprint/: deck.blend  deck.blend1
HomeAutomation/: IoT Projects
HomeAutomation/ArmModule/FW/: ArmModules.hzp  ArmModules.hzs  CMakeLists.txt  clang_options.txt  clean.sh
HomeAutomation/ArmModule/FW/Dependencies/Common/include/: AtCmdPacket.h  BME280.h  Clock.h  CommonConfig.h  Flash.h  HttpPacket.h  HttpServerTask.h  LCD.h  LEDs.h  MainTask.h  MessageList.h  MessageRecord.h  Relays.h  SysMonitorTask.h  TaskWrapper.h  VideoBuffer.h  WaterSensorSample.h  WaterValve.h  WiFiReceiverTask.h  WiFiTransmitterTask.h  XBeeTask.h  Zstring.h  delay.h  main.h
HomeAutomation/ArmModule/FW/Dependencies/Common/include/Fonts/: FontGeorgia10x7.h  FontGeorgia16x10.h  FontGeorgia30x20.h  FontGeorgia7x5.h
HomeAutomation/ArmModule/FW/Dependencies/Common/src/: AtCmdPacket.cpp  BME280.cpp  Clock.cpp  Flash.cpp  HttpPacket.cpp  HttpServerTask.cpp  LCD.cpp  LEDs.cpp  MainTask.cpp  MessageList.cpp  MessageRecord.cpp  Relays.cpp  SysMonitorTask.cpp  WaterSensorSample.cpp  WaterValve.cpp  WiFiReceiverTask.cpp  WiFiTransmitterTask.cpp  XBeeTask.cpp  Zstring.cpp  main.cpp
HomeAutomation/ArmModule/FW/Dependencies/Common/test/: Heap_test.cpp  HttpPacket_test.cpp  WiFiTask_test.cpp  Zstring_test.cpp
HomeAutomation/ArmModule/FW/Dependencies/EmbUnit/: AUTHORS  COPYING  makefile  readme.txt  readme_en.txt
HomeAutomation/ArmModule/FW/Dependencies/EmbUnit/embUnit/: AssertImpl.c  AssertImpl.h  HelperMacro.h  RepeatedTest.c  RepeatedTest.h  Test.h  TestCaller.c  TestCaller.h  TestCaller_PP.c  TestCase.c  TestCase.h  TestListener.h  TestResult.c  TestResult.h  TestRunner.c  TestRunner.h  TestSuite.c  TestSuite.h  config.h  embUnit.h  makefile  stdImpl.c  stdImpl.h
HomeAutomation/ArmModule/FW/Dependencies/EmbUnit/samples/: AllTests.c  makefile
HomeAutomation/ArmModule/FW/Dependencies/EmbUnit/tests/: AllTests.c  MockTestCase.c  MockTestCase.h  RepeatedTestTest.c  TestCallerTest.c  TestCaseTest.c  TestResultTest.c  assertTest.c  makefile  stdImplTest.c
HomeAutomation/ArmModule/FW/Dependencies/EmbUnit/textui/: TextUIRunner.c  TextUIRunner.h  makefile
HomeAutomation/ArmModule/FW/Dependencies/EmbUnit/tools/: COPYING  makefile  readme_en.txt
HomeAutomation/ArmModule/FW/Dependencies/EmbUnit/tools/tbcuppa/: bcuppa.c  strvec.c  strvec.h  tcuppa.c
HomeAutomation/ArmModule/FW/Dependencies/EmbUnit/tools/tbuma/: buma.c  tuma.c
HomeAutomation/ArmModule/FW/Dependencies/FreeRTOS/include/: FreeRTOSConfig.h  portable.h
HomeAutomation/ArmModule/FW/Dependencies/FreeRTOS/include/freeRtosPortability/: heap_4.h
HomeAutomation/ArmModule/FW/Dependencies/FreeRTOS/src/: tasks.c
HomeAutomation/ArmModule/FW/Dependencies/FreeRTOS/src/freeRtosPortability/: heap_4.c  port.c
HomeAutomation/ArmModule/FW/Dependencies/STM32F4/include/: core_cmFunc.h  stm32f405xx.h  stm32f4xx_conf.h  stm32f4xx_exti.h  stm32f4xx_flash.h  stm32f4xx_i2c.h  stm32f4xx_rcc.h  stm32f4xx_rtc.h  stm32f4xx_syscfg.h
HomeAutomation/ArmModule/FW/Dependencies/STM32F4/src/: misc.c  stm32f4xx_iwdg.c  stm32f4xx_rcc.c  stm32f4xx_usart.c  stm32f4xx_wwdg.c
HomeAutomation/ArmModule/FW/HVAC/include/: MainTask.h  main.h
HomeAutomation/ArmModule/FW/HVAC/src/: MainTask.cpp  main.cpp
HomeAutomation/ArmModule/FW/WaterGate/: STM32F405RG_MemoryMap.xml
HomeAutomation/ArmModule/FW/WaterGate/include/: MainTask.h  SpecializedMain.h  SpecializedMainTask.h  WaterGateMainTask.h  main.h
HomeAutomation/ArmModule/FW/WaterGate/src/: MainTask.cpp  SpecializedMain.cpp  SpecializedMainTask.cpp  WaterGateMain.cpp  WaterGateMainTask.cpp  main.cpp
HomeAutomation/ArmModule/FirmwarePusher/: FirmwarePusher.sh  remoteRestore.sh
HomeAutomation/ArmModule/PCB/: BOM.xlsx  armModule.dch  armModule.dip  bugs.txt  ~armModule.dip~
HomeAutomation/ArmModule/PCB/CAM/: BoardOutline.GKO  BottomMask.GBS  BottomSilk.GBO  Drill.DRL  TopMask.GTS  TopSilk.GTO  layer1.GTL  layer2.G2L  layer3.G3L  layer4.GBL
HomeAutomation/Docs/: RLY08 I2C Mode.mht  RLY08 Serial Mode.mht
HomeAutomation/ESP8266/BME280/: httpServer.lua  init.lua
HomeAutomation/ESP8266/luaLoader/version 0.91/: LuaLoader.ini  RecentFiles.txt
HomeAutomation/ESP8266/sprinklerTimer/: httpServer.lua  init.lua  relays.lua
HomeAutomation/ESP8266/sprinklerTimer/server/: house.war  pom.xml  programs.xml  systemProperties.properties  userProperties.properties
HomeAutomation/ESP8266/tempSensor/: SHT1x.lua  init.lua
HomeAutomation/IoT/: Weather project
HomeAutomation/IoT/AirQuality/: 220038000b47363433353735_rsa_new.der  220038000b47363433353735_rsa_new.pem  220038000b47363433353735_rsa_new.pub.pem  backup_rsa_220038000b47363433353735_rsa_new.der  backup_rsa_220038000b47363433353735_rsa_new.pub.pem  main.ino  project.properties
HomeAutomation/IoT/OutdoorSensor/: README.md
HomeAutomation/IoT/Weather/: README.md
HomeAutomation/Server/: pom.xml  start.sh
HomeAutomation/Server/AngularUI/: .angular-cli.json  package-lock.json  package.json  pom.xml
HomeAutomation/Server/Services/: pom.xml
HomeAutomation/Server/rest/: pom.xml
HomeAutomation/Server/ui/: README.md  angular-cli.json  angular.json
HomeAutomation/WaterSensor/PCB/: WaterSensorBom..xlsx  WaterSensorBom.csv  waterSensor.dch  waterSensor.dip
HomeAutomation/WaterSensor/XBee_config/: WaterGateWiFi.xml  WaterGateWiFi_bootloader.xml  coordinator.xml  water_sensor.xml
HomeAutomation/house/: .project
HomeAutomation/house/APDS9960/: BusPirateScript.txt
HomeAutomation/house/GwtServer/: pom.xml
HomeAutomation/house/HexUploader/: HexUploader.log.1  log4j.properties  pom.xml  testFile.exp  testFile.hex  testFile.out
HomeAutomation/house/Sensor/: Sensor.atsln  Sensor.atsuo  Sensor.avrsln  Sensor.avrsuo
HomeAutomation/house/doc/: RLY08 I2C Mode.mht  RLY08 Serial Mode.mht
HomeAutomation/house/server/: inspection_settings.xml  pom.xml  programs.xml  systemProperties.properties  update_maven_repo.sh  userProperties.properties
HomeAutomation/house/xbee-api/: build.xml
(+814 files in other folders)
