cmake_minimum_required(VERSION 3.8)
project(FW)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Dependencies/Common/include/Fonts/FontGeorgia10x7.h
        Dependencies/Common/include/Fonts/FontGeorgia16x10.h
        Dependencies/Common/include/Fonts/FontGeorgia30x20.h
        Dependencies/Common/include/Fonts/FontGeorgia7x5.h
        Dependencies/Common/include/AtCmdPacket.h
        Dependencies/Common/include/BME280.h
        Dependencies/Common/include/Clock.h
        Dependencies/Common/include/CommonConfig.h
        Dependencies/Common/include/delay.h
        Dependencies/Common/include/Flash.h
        Dependencies/Common/include/HttpPacket.h
        Dependencies/Common/include/LCD.h
        Dependencies/Common/include/LEDs.h
        Dependencies/Common/include/main.h
        Dependencies/Common/include/MainTask.h
        Dependencies/Common/include/MessageList.h
        Dependencies/Common/include/MessageRecord.h
        Dependencies/Common/include/Relays.h
        Dependencies/Common/include/SysMonitorTask.h
        Dependencies/Common/include/TaskWrapper.h
        Dependencies/Common/include/VideoBuffer.h
        Dependencies/Common/include/WaterSensorSample.h
        Dependencies/Common/include/WaterValve.h
        Dependencies/Common/include/WiFiReceiverTask.h
        Dependencies/Common/include/WiFiTransmitterTask.h
        Dependencies/Common/include/XBeeTask.h
        Dependencies/Common/include/Zstring.h
        Dependencies/Common/src/AtCmdPacket.cpp
        Dependencies/Common/src/BME280.cpp
        Dependencies/Common/src/Clock.cpp
        Dependencies/Common/src/Flash.cpp
        Dependencies/Common/src/HttpPacket.cpp
        Dependencies/Common/src/LCD.cpp
        Dependencies/Common/src/LEDs.cpp
        Dependencies/Common/src/main.cpp
        Dependencies/Common/src/MainTask.cpp
        Dependencies/Common/src/MessageList.cpp
        Dependencies/Common/src/MessageRecord.cpp
        Dependencies/Common/src/Relays.cpp
        Dependencies/Common/src/SysMonitorTask.cpp
        Dependencies/Common/src/WaterSensorSample.cpp
        Dependencies/Common/src/WaterValve.cpp
        Dependencies/Common/src/WiFiReceiverTask.cpp
        Dependencies/Common/src/WiFiTransmitterTask.cpp
        Dependencies/Common/src/XBeeTask.cpp
        Dependencies/Common/src/Zstring.cpp
        Dependencies/Common/test/Heap_test.cpp
        Dependencies/Common/test/HttpPacket_test.cpp
        Dependencies/Common/test/WiFiTask_test.cpp
        Dependencies/Common/test/Zstring_test.cpp
        Dependencies/EmbUnit/embUnit/AssertImpl.c
        Dependencies/EmbUnit/embUnit/AssertImpl.h
        Dependencies/EmbUnit/embUnit/config.h
        Dependencies/EmbUnit/embUnit/embUnit.h
        Dependencies/EmbUnit/embUnit/HelperMacro.h
        Dependencies/EmbUnit/embUnit/RepeatedTest.c
        Dependencies/EmbUnit/embUnit/RepeatedTest.h
        Dependencies/EmbUnit/embUnit/stdImpl.c
        Dependencies/EmbUnit/embUnit/stdImpl.h
        Dependencies/EmbUnit/embUnit/Test.h
        Dependencies/EmbUnit/embUnit/TestCaller.c
        Dependencies/EmbUnit/embUnit/TestCaller.h
        Dependencies/EmbUnit/embUnit/TestCaller_PP.c
        Dependencies/EmbUnit/embUnit/TestCase.c
        Dependencies/EmbUnit/embUnit/TestCase.h
        Dependencies/EmbUnit/embUnit/TestListener.h
        Dependencies/EmbUnit/embUnit/TestResult.c
        Dependencies/EmbUnit/embUnit/TestResult.h
        Dependencies/EmbUnit/embUnit/TestRunner.c
        Dependencies/EmbUnit/embUnit/TestRunner.h
        Dependencies/EmbUnit/embUnit/TestSuite.c
        Dependencies/EmbUnit/embUnit/TestSuite.h
        Dependencies/EmbUnit/samples/AllTests.c
        Dependencies/EmbUnit/samples/counter.c
        Dependencies/EmbUnit/samples/counter.h
        Dependencies/EmbUnit/samples/counterTest.c
        Dependencies/EmbUnit/samples/person.c
        Dependencies/EmbUnit/samples/person.h
        Dependencies/EmbUnit/samples/personTest.c
        Dependencies/EmbUnit/tests/AllTests.c
        Dependencies/EmbUnit/tests/assertTest.c
        Dependencies/EmbUnit/tests/MockTestCase.c
        Dependencies/EmbUnit/tests/MockTestCase.h
        Dependencies/EmbUnit/tests/RepeatedTestTest.c
        Dependencies/EmbUnit/tests/stdImplTest.c
        Dependencies/EmbUnit/tests/TestCallerTest.c
        Dependencies/EmbUnit/tests/TestCaseTest.c
        Dependencies/EmbUnit/tests/TestResultTest.c
        Dependencies/EmbUnit/textui/CompilerOutputter.c
        Dependencies/EmbUnit/textui/CompilerOutputter.h
        Dependencies/EmbUnit/textui/Outputter.h
        Dependencies/EmbUnit/textui/TextOutputter.c
        Dependencies/EmbUnit/textui/TextOutputter.h
        Dependencies/EmbUnit/textui/TextUIRunner.c
        Dependencies/EmbUnit/textui/TextUIRunner.h
        Dependencies/EmbUnit/textui/XMLOutputter.c
        Dependencies/EmbUnit/textui/XMLOutputter.h
        Dependencies/EmbUnit/tools/tbcuppa/bcuppa.c
        Dependencies/EmbUnit/tools/tbcuppa/strvec.c
        Dependencies/EmbUnit/tools/tbcuppa/strvec.h
        Dependencies/EmbUnit/tools/tbcuppa/tcuppa.c
        Dependencies/EmbUnit/tools/tbuma/buma.c
        Dependencies/EmbUnit/tools/tbuma/tuma.c
        Dependencies/FreeRTOS/include/freeRtosPortability/heap_4.h
        Dependencies/FreeRTOS/include/freeRtosPortability/portmacro.h
        Dependencies/FreeRTOS/include/croutine.h
        Dependencies/FreeRTOS/include/deprecated_definitions.h
        Dependencies/FreeRTOS/include/event_groups.h
        Dependencies/FreeRTOS/include/FreeRTOS.h
        Dependencies/FreeRTOS/include/FreeRTOSConfig.h
        Dependencies/FreeRTOS/include/list.h
        Dependencies/FreeRTOS/include/mpu_wrappers.h
        Dependencies/FreeRTOS/include/portable.h
        Dependencies/FreeRTOS/include/projdefs.h
        Dependencies/FreeRTOS/include/queue.h
        Dependencies/FreeRTOS/include/semphr.h
        Dependencies/FreeRTOS/include/StackMacros.h
        Dependencies/FreeRTOS/include/task.h
        Dependencies/FreeRTOS/include/timers.h
        Dependencies/FreeRTOS/src/freeRtosPortability/heap_4.c
        Dependencies/FreeRTOS/src/freeRtosPortability/port.c
        Dependencies/FreeRTOS/src/croutine.c
        Dependencies/FreeRTOS/src/event_groups.c
        Dependencies/FreeRTOS/src/list.c
        Dependencies/FreeRTOS/src/queue.c
        Dependencies/FreeRTOS/src/tasks.c
        Dependencies/FreeRTOS/src/timers.c
        Dependencies/STM32F4/include/arm_common_tables.h
        Dependencies/STM32F4/include/arm_const_structs.h
        Dependencies/STM32F4/include/arm_math.h
        Dependencies/STM32F4/include/core_cm0.h
        Dependencies/STM32F4/include/core_cm0plus.h
        Dependencies/STM32F4/include/core_cm3.h
        Dependencies/STM32F4/include/core_cm4.h
        Dependencies/STM32F4/include/core_cm4_simd.h
        Dependencies/STM32F4/include/core_cmFunc.h
        Dependencies/STM32F4/include/core_cmInstr.h
        Dependencies/STM32F4/include/core_sc000.h
        Dependencies/STM32F4/include/core_sc300.h
        Dependencies/STM32F4/include/misc.h
        Dependencies/STM32F4/include/stm32f405xx.h
        Dependencies/STM32F4/include/stm32f4xx.h
        Dependencies/STM32F4/include/stm32f4xx_adc.h
        Dependencies/STM32F4/include/stm32f4xx_can.h
        Dependencies/STM32F4/include/stm32f4xx_conf.h
        Dependencies/STM32F4/include/stm32f4xx_crc.h
        Dependencies/STM32F4/include/stm32f4xx_cryp.h
        Dependencies/STM32F4/include/stm32f4xx_dac.h
        Dependencies/STM32F4/include/stm32f4xx_dbgmcu.h
        Dependencies/STM32F4/include/stm32f4xx_dcmi.h
        Dependencies/STM32F4/include/stm32f4xx_dma.h
        Dependencies/STM32F4/include/stm32f4xx_dma2d.h
        Dependencies/STM32F4/include/stm32f4xx_exti.h
        Dependencies/STM32F4/include/stm32f4xx_flash.h
        Dependencies/STM32F4/include/stm32f4xx_fmc.h
        Dependencies/STM32F4/include/stm32f4xx_fsmc.h
        Dependencies/STM32F4/include/stm32f4xx_gpio.h
        Dependencies/STM32F4/include/stm32f4xx_hash.h
        Dependencies/STM32F4/include/stm32f4xx_i2c.h
        Dependencies/STM32F4/include/stm32f4xx_iwdg.h
        Dependencies/STM32F4/include/stm32f4xx_ltdc.h
        Dependencies/STM32F4/include/stm32f4xx_pwr.h
        Dependencies/STM32F4/include/stm32f4xx_rcc.h
        Dependencies/STM32F4/include/stm32f4xx_rng.h
        Dependencies/STM32F4/include/stm32f4xx_rtc.h
        Dependencies/STM32F4/include/stm32f4xx_sai.h
        Dependencies/STM32F4/include/stm32f4xx_sdio.h
        Dependencies/STM32F4/include/stm32f4xx_spi.h
        Dependencies/STM32F4/include/stm32f4xx_syscfg.h
        Dependencies/STM32F4/include/stm32f4xx_tim.h
        Dependencies/STM32F4/include/stm32f4xx_usart.h
        Dependencies/STM32F4/include/stm32f4xx_wwdg.h
        Dependencies/STM32F4/include/system_stm32f4xx.h
        Dependencies/STM32F4/src/exclude/stm32f4xx_exti.c
        Dependencies/STM32F4/src/exclude/stm32f4xx_fmc.c
        Dependencies/STM32F4/src/misc.c
        Dependencies/STM32F4/src/stm32f4xx_dma.c
        Dependencies/STM32F4/src/stm32f4xx_exti.c
        Dependencies/STM32F4/src/stm32f4xx_flash.c
        Dependencies/STM32F4/src/stm32f4xx_gpio.c
        Dependencies/STM32F4/src/stm32f4xx_i2c.c
        Dependencies/STM32F4/src/stm32f4xx_iwdg.c
        Dependencies/STM32F4/src/stm32f4xx_pwr.c
        Dependencies/STM32F4/src/stm32f4xx_rcc.c
        Dependencies/STM32F4/src/stm32f4xx_rtc.c
        Dependencies/STM32F4/src/stm32f4xx_spi.c
        Dependencies/STM32F4/src/stm32f4xx_syscfg.c
        Dependencies/STM32F4/src/stm32f4xx_tim.c
        Dependencies/STM32F4/src/stm32f4xx_usart.c
        Dependencies/STM32F4/src/stm32f4xx_wwdg.c
        Dependencies/STM32F4/src/system_stm32f4xx.c
        WaterGate/include/SpecializedMain.h
        WaterGate/include/SpecializedMainTask.h
        WaterGate/src/SpecializedMain.cpp
        WaterGate/src/SpecializedMainTask.cpp)

add_executable(FW ${SOURCE_FILES})